--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <!-- <link type="image/x-icon" rel="icon" href="./static/favicon.ico"> -->
+    <link type="image/x-icon" rel="icon" href="./static/favicon.ico">
     <!-- 静态资源文件 -->
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1076181_pxw0hgf560i.css">
     <!-- <link rel="stylesheet" href="static/iconfont/iconfont.css"> -->
@@ -12,6 +12,6 @@
   <body>
     <div id="app"></div>
   </body>
-  <script src="http://cdn.ronghub.com/RongIMLib-2.5.0.min.js"></script> 
-  <script src="http://cdn.ronghub.com/RongEmoji-2.2.7.min.js"></script> 
+  <!-- <script src="http://cdn.ronghub.com/RongIMLib-2.5.0.min.js"></script>  -->
+  <!-- <script src="http://cdn.ronghub.com/RongEmoji-2.2.7.min.js"></script>  -->
 </html>
