--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <body>
     <div id="app"></div>
   </body>
-  <!-- <script src="http://cdn.ronghub.com/RongIMLib-2.5.0.min.js"></script>  -->
-  <!-- <script src="http://cdn.ronghub.com/RongEmoji-2.2.7.min.js"></script>  -->
+  <script src="http://cdn.ronghub.com/RongIMLib-2.5.0.min.js"></script>
+  <script src="http://cdn.ronghub.com/RongEmoji-2.2.7.min.js"></script>
 </html>
